--- a/src/components/SearchResults/style.css
+++ b/src/components/SearchResults/style.css
@@ -1,4 +1,27 @@
-.search-results {
+.search-section {
   background-color: #442f12;
-  height: 80vh;
+  min-height: 80vh;
+  color: #d7bf77;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.search-results {
+  margin: 70px 0;
+}
+
+.character-name {
+  color: white;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.card {
+  width: 300px;
 }
