--- a/src/components/Pagination/style.css
+++ b/src/components/Pagination/style.css
@@ -8,7 +8,8 @@
   border-radius: 50%;
 }
 
-.pagination-control {
+.pagination-control,
+.pagination-button_out-of-range-pages {
   background-color: transparent;
   border: 1px solid #442f12;
   color: white;
@@ -42,4 +43,12 @@
 .pagination-button_disabled:active {
   opacity: 0;
   cursor: default;
+}
+
+.pagination-button_out-of-range-pages,
+.pagination-button_out-of-range-pages:hover,
+.pagination-button_out-of-range-pages:active {
+  cursor: default;
+  color: white;
+  opacity: 1;
 }
